# Projet-Open-Data

./: .env.example  README.md  README_IA.md  bash.sh  example_usage.py  pipeline.py  pyproject.toml  setup.cfg  streamlit.py
data/enriched/: off_enriched.parquet
data/processed/: ciqual_aliments_clean.csv  ciqual_transformed.parquet  off_transformed.parquet  openfoodfacts_products_clean.csv
data/raw/: ciqual_aliments.csv  openfoodfacts_products.csv
src/: __init__.py
src/config/: paths.py
src/data/: __init__.py  fetch_data.py
src/data/clients/: __init__.py  ciqual.py  openfoodfacts.py
src/enricher/: enrich_data.py
src/ia/: __init__.py  chatbot.py  llm_manager.py  product_analyzer.py  prompts.py  recommender.py
tests/: test_gemini.py  test_ia.py
utils/: transformer.py
