[project]
name = "nutriscan"
version = "0.1.0"
description = "NutriScan - Assistant nutrition intelligent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=6.0.0",
    "duckdb>=1.4.3",
    "fastparquet>=2024.11.0",
    "google-generativeai>=0.8.6",
    "gradio>=6.1.0",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "litellm>=1.80.10",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "xlrd>=2.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
